lgtm/alloy-collector/alloy-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-collector
  namespace: alloy
spec:
  selector:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: alloy-alloy-collector
  type: ClusterIP
  ports:
    - name: faro
      port: 12347
      targetPort: 12347
      protocol: TCP
