lgtm/alloy-collector/alloy-collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-collector-ingress
  namespace: alloy
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: faro.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy-alloy-collector
                port:
                  number: 12347
